
INCLUDES =	 			\
	-I../../..	 		\
	-I$(srcdir)/../../..	 	\
	-I$(includedir)

#bin_PROGRAMS = menx
#
#menu_SOURCES = \
#	main.xc		
#
#menu_LDADD = \
#	$(top_builddir)/libgnome/libgnome.la		\
#	$(top_builddir)/libgnomeui/libgnomeui.la 	\
#        $(X_LIBS)

lib_LTLIBRARIES = libpanel_menu.la

libpanel_menu_la_SOURCES = 	\
	main.c
